still trying to make tox work

--- a/tox.ini
+++ b/tox.ini
@@ -8,4 +8,4 @@ addopts = -rfxEXs --showlocals
 deps = pytest
 recreate = True
 commands =
-  pytest {posargs:nanashi/test}
+  pytest {posargs:pywsd/test}
