still trying to make travis work...

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,6 @@ matrix:
 install:
   - pip install -r requirements.txt
   - pip install tox
+  - python -m nltk.downloader popular
 
 script: tox -vv
